fix goals spacing

--- a/src/components/Objectives/Objectives.scss
+++ b/src/components/Objectives/Objectives.scss
@@ -1,7 +1,6 @@
 @import "./../../styles/lib";
 
 .Objectives {
-  // background: $space-black;
   max-width: $post-max-width;
   margin: 0 auto;
   padding: 36px !important;
@@ -16,19 +15,18 @@
   h2 {
     padding: 0 !important;
     margin-bottom: 1.25rem !important;
+    margin-top: 0;
   }
 
   ul {
     list-style: none;
     padding: 0;
-    padding-left: 20px;
+    padding-left: 0 !important;
     margin: 0 !important;
 
     li {
       line-height: 155%;
       margin-bottom: 0.9em;
-      padding-left: 7px;
-      text-indent: -2.85rem;
 
       &:last-child {
         margin-bottom: 0 !important;
@@ -51,8 +49,12 @@
 
     ul {
       li {
-        text-indent: -1.8rem;
+        // text-indent: -1.8rem;
       }
     }
+  }
+
+  @media (max-width: $media-mobile) {
+    margin-top: 10px;
   }
 }
